# lie-algebra-demo

./: .gitignore  CMakeLists.txt  README.md  show.sh
common/: read_g2o.h
pose_graph_3d/: CMakeLists.txt  local_parameterization_se3.h  local_parameterization_se3_analytic.h  local_parameterization_se3_auto.h  pose_graph_3d.cc  pose_graph_3d_error_term.h  pose_graph_lie.cc  pose_graph_lie_analytic.cc  pose_graph_lie_autodiff.cc  pose_graph_lie_error_term.h  types.h
